# AirlinesPipeline

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
airlines/ETL/: env
airlines/ETL/Extratores/: aircraft_data.py  airports_data.py  boarding_passes.py  bookings.py  extract_data.py  flights.py  seats.py  ticket_flights.py  tickets.py
airlines/ETL/Transformadores/: aircraft_data.py  airports_data.py  bookings.py  flights.py  transform_data.py
containers/postgres/: Dockerfile
src/airflow/dags/: etl.py
